--- a/ltiTestReview/composer.json
+++ b/ltiTestReview/composer.json
@@ -25,7 +25,7 @@
   "autoload": {
     "psr-4": {
       "oat\\taoReview\\": "",
-      "oat\\taoReview\\models\\": "models/",
+      "oat\\taoReview\\models\\": "models/"
     }
   }
 }
