--- a/taoAltResultStorage/composer.json
+++ b/taoAltResultStorage/composer.json
@@ -1,66 +1,68 @@
 {
-
-    "name": "oat-sa/extension-tao-outcomekeyvalue",
-    "description" : "extension to manage key-value outcomes in TAO",
-    "type" : "tao-extension",
-    "authors" : [
-		{
-		"name" : "Open Assessment Technologies S.A.",
-		"homepage" : "http://www.taotesting.com"
-		},
-		{
-		"name": "Jérôme Bogaerts",
-		"role": "Developer"
-		},
-		{
-		"name": "Joel Bout",
-		"role": "Developer"
-		},
-		{
-		"name": "Bertrand Chevrier",
-		"role": "Developer"
-		},
-		{
-		"name": "Lionel Lecaque",
-		"role": "Developer"
-		},
-		{
-		"name": "Patrick Plichart",
-		"role": "Developer"
-		},
-		{
-		"name": "Dieter Raber",
-		"role": "Developer"
-		},
-		{
-		"name": "Somsack Sipasseuth",
-		"role": "Developer"
-		}
-	],
-	"support": {
-		"forum": "http://forum.taotesting.com",
-		"issues": "http://forge.taotesting.com"
-	},
-	"keywords" : [
-		"tao",
-		"oat",
-		"QTI",
-		"computer-based-assessment"
-	],
-	"homepage" : "http://www.taotesting.com",
-	"license" : [
-	"GPL-2.0-only"
-	],
-    "extra" : {
-    	"tao-extension-name" : "taoAltResultStorage"
+  "name": "oat-sa/extension-tao-outcomekeyvalue",
+  "description": "extension to manage key-value outcomes in TAO",
+  "type": "tao-extension",
+  "authors": [
+    {
+      "name": "Open Assessment Technologies S.A.",
+      "homepage": "http://www.taotesting.com"
     },
-    "autoload": {
-    	"psr-4" : {
-            "oat\\taoAltResultStorage\\" : ""
-        }
+    {
+      "name": "Jérôme Bogaerts",
+      "role": "Developer"
     },
-    "minimum-stability" : "dev",
-    "require": {
-        "oat-sa/oatbox-extension-installer": "~1.1||dev-master"
+    {
+      "name": "Joel Bout",
+      "role": "Developer"
+    },
+    {
+      "name": "Bertrand Chevrier",
+      "role": "Developer"
+    },
+    {
+      "name": "Lionel Lecaque",
+      "role": "Developer"
+    },
+    {
+      "name": "Patrick Plichart",
+      "role": "Developer"
+    },
+    {
+      "name": "Dieter Raber",
+      "role": "Developer"
+    },
+    {
+      "name": "Somsack Sipasseuth",
+      "role": "Developer"
     }
+  ],
+  "support": {
+    "forum": "http://forum.taotesting.com",
+    "issues": "http://forge.taotesting.com"
+  },
+  "keywords": [
+    "tao",
+    "oat",
+    "QTI",
+    "computer-based-assessment"
+  ],
+  "homepage": "http://www.taotesting.com",
+  "license": [
+    "GPL-2.0-only"
+  ],
+  "extra": {
+    "tao-extension-name": "taoAltResultStorage"
+  },
+  "autoload": {
+    "psr-4": {
+      "oat\\taoAltResultStorage\\": ""
+    }
+  },
+  "minimum-stability": "dev",
+  "require": {
+    "oat-sa/oatbox-extension-installer": "~1.1||dev-master"
+  },
+  "require-dev":{
+    "phpunit/phpunit": "6.5.0"
+  }
 }
