--- a/tao/composer.json
+++ b/tao/composer.json
@@ -57,7 +57,7 @@
         "imsglobal/lti": "^3.0",
         "paragonie/random_compat": "^2.0",
         "oat-sa/composer-npm-bridge": "^0.3.0",
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "~4.3"
     },
     "autoload": {
         "psr-4": {
