use env variables for grunt s3 and an ignored template file

--- a/tao/.gitignore
+++ b/tao/.gitignore
@@ -4,6 +4,7 @@
 /.settings/
 install/log/install.log
 views/build/.htaccess
+views/build/config/aws.json
 views/js/test/.htaccess
 /views/js/lib/jsTree/themes/scss/style.css
 /views/js/lib/jsTree/themes/scss/style.css.map
